# minimc-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py.in
app/: __init__.py  minimc-gui.py
binding/: CMakeLists.txt  pyalgorithms.cpp  pycpa.cpp  pyloader.cpp  pyminimc.cpp  pymodel.cpp  pyvm.cpp
binding/cpa/: CMakeLists.txt  interface.cpp
binding/interpreter/: CMakeLists.txt  interpreter.cpp
binding/loaders/: CMakeLists.txt
binding/model/: CMakeLists.txt  cfg.cpp  model.cpp
dependencies/: CMakeLists.txt
dependencies/pybind11/: CMakeLists.txt
